<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInPhone"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:drawableTint="@color/black"
        android:drawableLeft="@drawable/fui_ic_phone_white_24dp"
        android:text="@string/signPhone"
        app:layout_constraintBottom_toTopOf="@id/btnSignInGoogle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInGoogle"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/googleg_color_24dp"
        android:text="@string/signGoogle"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>